--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     container_name: petterson-portfolio
     ports:
       - "80:8080"
+      - "443:8443"
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     restart: unless-stopped
-    read_only: true
     security_opt:
       - no-new-privileges:true
     tmpfs:
