--- a/nginx.conf
+++ b/nginx.conf
@@ -31,15 +31,31 @@ http {
 
     server {
         listen 8080;
-        server_name _;
+        server_name petterson.dev www.petterson.dev;
+        return 301 https://$server_name$request_uri;
+    }
+
+    server {
+        listen 8443 ssl;
+        http2 on;
+        server_name petterson.dev www.petterson.dev;
         root /usr/share/nginx/html;
         index index.html;
+
+        ssl_certificate /etc/letsencrypt/live/petterson.dev/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/petterson.dev/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
 
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self';" always;
 
         if ($request_method !~ ^(GET|HEAD)$) {
