--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
     build: .
     container_name: petterson-portfolio
     ports:
-      - "80:8080"
-      - "443:8443"
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+      - PAYLOAD_CMS_URL=${PAYLOAD_CMS_URL:-http://localhost:3001}
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
