feat: add Caddy reverse proxy
- Add Caddy container for SSL and routing
- Create shared 'web' network for inter-service communication
- Route petterson.dev to portfolio, blog.petterson.dev to blog

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT }}
+          script_stop: true
           script: |
+            set -e
             cd ~/petterson.dev
             git pull origin main
             docker compose up -d --build
