refactor: convert to monorepo with apps/portfolio and apps/blog
- Move portfolio to apps/portfolio/
- Add blog (Payload CMS) to apps/blog/
- Unified docker-compose with Caddy, portfolio, blog, and PostgreSQL
- Single GitHub Actions workflow deploys everything
- Simplified architecture: one repo, one deployment

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,7 @@
 petterson.dev {
-    reverse_proxy petterson-portfolio:3000
+    reverse_proxy portfolio:3000
 }
 
 blog.petterson.dev {
-    reverse_proxy blog-app:3000
+    reverse_proxy blog:3000
 }
