--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Payload CMS API URL
-# Development: http://localhost:3000/api
-# Production: https://blog.petterson.dev/api
-PAYLOAD_API_URL=http://localhost:3000/api
+# Database
+DATABASE_URI=postgresql://blog:blog@db:5432/blog
+POSTGRES_USER=blog
+POSTGRES_PASSWORD=blog
+POSTGRES_DB=blog
+
+# Payload CMS
+PAYLOAD_SECRET=your-secret-key-here
